--- a/package.json
+++ b/package.json
@@ -14,22 +14,12 @@
     "watch:scss": "sass --watch src/main.scss:src/index.css",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "prepare": "husky install",
-    "husky": {
-      "hooks": {
-        "pre-commit": "lint-staged",
-        "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-      }
-    },
-    "lint-staged": {
-      "*.{js,jsx,ts,tsx}": ["eslint --fix", "git add"],
-      "*.{json,md}": ["prettier --write", "git add"]
-    }
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
     "@mui/material": "^5.11.10",
     "@reduxjs/toolkit": "^1.9.3",
+    "classnames": "^2.3.2",
     "eslint-config-prettier": "^9.0.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -48,7 +38,6 @@
     "eslint": "^8.48.0",
     "eslint-plugin-react": "^7.33.2",
     "gh-pages": "^5.0.0",
-    "husky": "^8.0.3",
     "install": "^0.13.0",
     "npm": "^9.8.1",
     "prettier": "^3.0.2",
