--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
   "dependencies": {
     "@mui/material": "^5.11.10",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/uuid": "^9.0.2",
     "classnames": "^2.3.2",
+    "dotenv": "^16.3.1",
     "eslint-config-prettier": "^9.0.0",
     "normalize.css": "^8.0.1",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/node": "^20.5.6",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
@@ -42,9 +45,11 @@
     "install": "^0.13.0",
     "npm": "^9.8.1",
     "prettier": "^3.0.2",
+    "react-error-overlay": "6.0.9",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
     "typescript-plugin-css-modules": "^4.2.2",
+    "uuid": "^9.0.0",
     "vite": "^4.1.0"
   }
 }
