--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@mui/material": "^5.11.10",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/react-transition-group": "^4.4.6",
     "@types/uuid": "^9.0.2",
     "classnames": "^2.3.2",
     "dotenv": "^16.3.1",
@@ -28,7 +29,8 @@
     "react-loading": "^2.0.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.15.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.5.6",
