--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.6",
@@ -52,6 +54,6 @@
     "typescript": "^4.9.3",
     "typescript-plugin-css-modules": "^4.2.2",
     "uuid": "^9.0.0",
-    "vite": "^4.1.0"
+    "vite": "^4.4.9"
   }
 }
