--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-transition-group": "^4.4.6",
     "@types/uuid": "^9.0.2",
     "classnames": "^2.3.2",
+    "compressorjs": "^1.2.1",
     "dotenv": "^16.3.1",
     "eslint-config-prettier": "^9.0.0",
     "normalize.css": "^8.0.1",
